# boids-evolution

./: README.md  boids-evolution.cabal
.stack-work/install/x86_64-linux/lts-8.13/8.0.2/flag-cache/: GLURaw-2.0.0.3-G12M6COyQIU5WfRlrIwPuj  GLUT-2.7.0.12-2MhssjvTvsoEqaoGvdwU4F  ObjectName-1.1.0.1-EiFOWjUQWWuLyOhtrmuIWX  OpenGL-3.0.2.0-4NExFyKSCLV2QLQh5nNNh9  OpenGLRaw-3.2.4.0-JDyGgOXR61GG549SwmWm2Q  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-4NsFv08p09OH79kZsQDVh1  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  bifunctors-5.4.2-wt6HPG9UFgCjbd0zbVYNT  bmp-1.2.6.3-43OLkH0uuwm831pBFpx2PZ  boids-evolution-0.1.0.0-1YpY6qodYWLBy3KpfkZrzW  bytes-0.15.3-7jT1oGwQgybKofgKzB5iem  cabal-doctest-1-3OH6xMXYfakDTTZ99VQuTb  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  comonad-5.0.1-7j4AeOMTFovFSFO9XMFm1  contravariant-1.4-3UCY3arLvoG71jrGOYoc39  distributive-0.5.2-JCgfTXNR3ywAyV7fFWIBI5  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fixed-0.2.1.1-8Jr82l0kss5Gr4nEevmXlZ  free-4.12.4-GP8SJAzGfyq6UeKHSkzaha  gloss-1.10.2.5-1rGgZyCKuRp8h5PVi74Lto  gloss-rendering-1.10.3.5-EKeNZeVEJrFmXpvS80oLb  half-0.2.2.3-GHJ372Ls7FBA3PAGtGHfOR  hashable-1.2.6.0-3EXxoqeEgbfAKr6aGkye6x  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  kan-extensions-5.0.1-6ECbavVWkY3Cfj2gSieTjm  lens-4.15.1-KnRHKhHsKR4Q0bIuDokQR  linear-1.20.6-IIgDRQAovNA1slL0tzPvfF  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parallel-3.2.1.1-KQJHWCcq2Ka569Stb10nhx  prelude-extras-0.4.0.3-BhL9U5k7NtGJn1itwIHt2Y  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  profunctors-5.2-85ZLvwISeusLRZoJlitoyP  random-1.1-9tceXaeYIMZ4JrKq20Egog  (+11 more)
src/: Lib.hs
(+6 files in other folders)
